# vpn_service

./: .dockerignore  .env.example  .gitignore  .kilocodeignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  kilo.jsonc  pyproject.toml  requirements.txt
.kilo/notes/: deployment-info.md
.kilo/plans/: 0001_mvp_foundation.md  0002_vpn_sources_crud.md  0003_vpn_link_checker.md  0005_encrypted_subscription_handlers.md  0006_subscription_metadata.md  1776877671833-curious-cactus.md  1777413627649-misty-moon.md
.kilo/rules/: architecture.md  data-model.md  fastapi.md  security.md  workflow.md
.kilo/skills/ddd-fastapi-feature/: SKILL.md
.kilo/skills/happ-subscription-design/: SKILL.md
.kilo/skills/security-auth-review/: SKILL.md
.kilo/skills/vpn-source-management/: SKILL.md
alembic/: env.py
alembic/versions/: 001_create_vpn_sources_and_tags.py  002_create_subscription_issues.py  003_add_subscription_metadata.py  004_add_import_group_and_imports.py
docs/: bulk-vpn-source-sync.md  database-schema.md  encrypted-subscription-flow.md
scripts/: check_vpn_links.py
src/: config.py  main.py
src/application/subscription_issuance/: __init__.py  dto.py  (+1 more)
src/infrastructure/: logging_config.py
tests/: conftest.py  test_happ_crypto_adapter.py  test_happ_metadata_generator.py  test_health.py  test_subscription_issuance_endpoints.py  test_subscription_issue_entity.py  test_subscription_url_generator.py  test_subscription_use_cases.py  test_vpn_sources_endpoints.py  test_vpn_sources_sync_text.py  test_vpn_uri_validator.py
(+45 files in other folders)
