[project]
name = "vpn-service"
version = "0.1.0"
description = "VPN Subscription Service for HAPP-compatible encrypted subscription links"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "uvicorn[standard]==0.32.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]